create board and cell

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -22,8 +22,8 @@
   -->
 
   <!-- <script type="text/javascript" src="spec/introduction.js"></script> -->
-  <script type="text/javascript" src="src/FizzBuzz.js"></script> 
-  <script type="text/javascript" src="spec/FizzBuzzSpec.js"></script> 
+  <script type="text/javascript" src="src/board.js"></script> 
+  <script type="text/javascript" src="spec/boardSpec.js"></script> 
   <script type="text/javascript">
     (function() {
       var jasmineEnv = jasmine.getEnv();
